Layout bug fixes for IE and Edge.

--- a/themes/wwwevergreen/css/src/custom-css/home.scss
+++ b/themes/wwwevergreen/css/src/custom-css/home.scss
@@ -99,6 +99,9 @@
 .hype-grid--magazine{
 	
 	@supports (grid-template: none){  // Targets browsers that support grid without autoprefixing with shitty IE/Edge syntax.
+		// box model
+		margin-left: 0;  // Overrides .grid fallback styling
+		// layout
 		display: grid;
 		grid-gap: 1em 2ch;
 		grid-template-columns: 1fr;
